# bhp

./: .gitignore  Makefile  README.md  pyproject.toml
BHV/: mkdocs.yml
BHV/docs/: about.md
BHV/site/: index.html
BHV/site/about/: index.html
BHV/site/search/: search_index.json
Loan Data/: Average Loan Amounts - Undergraduates.csv  Data Processing.ipynb  Lifetime Maximums.csv  Pell_Grant_Maximums_2001_2011.csv  Title_IV_Federal_Aid_Maximums_2000_2012.csv  annual_max_long.csv  average_loan_amounts_clean.csv  lifetime_max_long.csv  loan_originations_clean.csv  pell_max_long.csv
Loan Data/old/: Annual Maximums.csv  Federal_Loan_Originations_2006_2008.csv
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: 0.1-sv-data_exploration.ipynb  0.1-sv-explore_data.ipynb  Data Processing.ipynb
references/: ~$CollegeScorecardDataDictionary.xlsx
src/: config.py  dataset.py
