[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "We seek to verify or disprove the Bennet Hypothesis with a data science perspective."
authors = [
  { name = "Spencer Venancio and Jack Perloff" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pandas>=2.3.1",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "matplotlib", 
    "scikit-learn", 
    "statsmodels", 
    "lightgbm"
    "
]
requires-python = "~=3.10.0"

[project.optional-dependencies]
notebook = ["jupyter", "ipykernel"]

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

